clusters/eu001/root/tenants/nextnodepostgres/bundle/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextnodepostgres
  labels:
    smescloud.com/tenant: "true"
    smescloud.com/tenant-id: "nextnodepostgres"
    smescloud.com/plan: "starter"
    smescloud.com/is-tenant: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
