clusters/eu001/root/tenants/nextnodepostgres/bundle/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: nextnodepostgres
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
